did some cool stuff with buttons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link ref = "stylesheets" href = "css/styles.css">
 </head>
 <body>
-    
 
-    <script src="js/review-data-types.js"></script>
+    <a href="" target="_blank"> This is an anchor tag.</a>
+    <a href="">This is another anchor tag.</a>
+
+    <p id="para-1">This is just going to be a paragraph of whatever I want it to be because I am still unsure of some things in this class, especialy rebase. It confuses me but the work flow that was posted did help out a little. I am really happy to be learning javascript and can't wait to learn the useful aspects of it for the real world.</p>
+    
+    <button class="button" onclick="console.log('Button was clicked!')"> Submit!</button>
+    <button class="cancel-button" onclick="console.log('They wanted to cancel')">Cancel</button>
+    <script src="js/dom-event-listener.js"></script>
 
 </body>
 </html>
