worked on conditions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <button class="button" onclick="console.log('Button was clicked!')"> Submit!</button>
     <button class="cancel-button" onclick="console.log('They wanted to cancel')">Cancel</button>
-    <script src="js/dom-event-listener.js"></script>
+    <script src="js/conditions.js"></script>
 
 </body>
 </html>
