created scritpt file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
 
-    <script src="js/review-data-types.js"></script>
+    <script src="js/operators.js"></script>
 
 </body>
 </html>
